Fix tooltip position on mobile devices.

--- a/app/sass/common/_base.sass
+++ b/app/sass/common/_base.sass
@@ -131,5 +131,6 @@ hr
 	.f-questions,
 	footer.footer,
 	.breadcrumbs,
-	.pagination
-		display: none
+	.pagination,
+	.tooltip
+		display: none !important
